--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ToDo_KanazawaApplication</string>
+    <string name="page_detail_updated_at_label">2024/10/10</string>
 </resources>
